--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+ext{
+    vertxVersion = "4.2.1"
+}
+
 dependencies {
     // https://mvnrepository.com/artifact/cc.kave/cc.kave.commons
     implementation group: 'cc.kave', name: 'cc.kave.commons', version: '0.0.5'
@@ -23,6 +27,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
 
+    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+    implementation(platform("io.vertx:vertx-stack-depchain:$vertxVersion"))
+    implementation 'io.vertx:vertx-jdbc-client:4.2.1'
+    implementation 'io.vertx:vertx-core:4.2.1'
+    compileOnly group: 'io.agroal', name: 'agroal-api', version: '1.13'
+    runtimeOnly group: 'io.agroal', name: 'agroal-pool', version:'1.13'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
